@@ -1,3 +1,8 @@
+2001-08-11  John Levon  <moz@compsoc.man.ac.uk>
+
+	* oprofile.c: use a simple cli/sti when installing the NMI
+	  handler. It should work and avoids the unmasking problem.
+ 
 2001-08-10  John Levon  <moz@compsoc.man.ac.uk>
 
 	* dae/oprofiled.h: fix header include (from Dave Jones)
